# nr-documents-records

./: MANIFEST.in  build.sh  docs.yaml  generate.sh  local_install.sh  model.yaml  setup.cfg  unsupported.yaml
.github/workflows/: main.yaml
models/: docs.yaml  nr-documents-records-model.yaml  nr-documents-records.yaml
nr-documents-records/: setup.cfg
nr-documents-records-model-builder/: setup.cfg
nr-documents-records-model-builder/nr_documents_records_model_builder/models/: __init__.py
nr-documents-records/nr_documents_records/: __init__.py  version.py
nr-documents-records/nr_documents_records/records/jsonschemas/: nr-documents-records-1.0.0.json
nr_documents_records/: __init__.py
